--- a/css/NavMenu.module.css
+++ b/css/NavMenu.module.css
@@ -9,6 +9,9 @@
   font-size: 1.2rem;
   margin-left: 10px; }
 
+.navbar-toggler {
+  background-color: #fff !important; }
+
 .nav-color {
   background: blueviolet;
   background: -moz-linear-gradient(342deg, blueviolet 0%, rgba(27, 181, 236, 0.895418) 69%);
