--- a/css/MainContent.module.css
+++ b/css/MainContent.module.css
@@ -9,8 +9,7 @@
     box-shadow: 0px 25px 20px rgba(0, 0, 0, 0.4); }
 
 .tile-img {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
   object-fit: cover; }
 
 .tile-container {
@@ -55,3 +54,6 @@
   .hex-bg .info-panel {
     background-color: none;
     width: 100% !important; }
+
+.card-view {
+  max-height: 269px; }
