--- a/css/NavMenu.module.css
+++ b/css/NavMenu.module.css
@@ -1,3 +1,9 @@
+.site-name {
+  font-family: 'ArmyRust';
+  font-size: 2rem;
+  padding-left: 1rem;
+  letter-spacing: 0.15rem; }
+
 .brand {
   display: flex;
   align-items: center; }
