--- a/css/NavMenu.module.css
+++ b/css/NavMenu.module.css
@@ -18,9 +18,19 @@
 .navbar-toggler {
   background-color: #fff !important; }
 
-.nav-color {
-  background: blueviolet;
-  background: -moz-linear-gradient(342deg, blueviolet 0%, rgba(27, 181, 236, 0.895418) 69%);
-  background: -webkit-linear-gradient(342deg, blueviolet 0%, rgba(27, 181, 236, 0.895418) 69%);
-  background: linear-gradient(342deg, blueviolet 0%, rgba(27, 181, 236, 0.895418) 69%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#8a2be2",endColorstr="#1bb5ec",GradientType=1); }
+.nav-color::before,
+.nav-color::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
+  background-color: #7B6C9E; }
+
+.nav-color::before {
+  transform: skewY(-12deg); }
+
+.nav-color::after {
+  transform: skewY(12deg); }
