--- a/css/NavMenu.module.css
+++ b/css/NavMenu.module.css
@@ -1,8 +1,9 @@
-.site-name {
+.site-name-font {
   font-family: 'ArmyRust';
-  font-size: 2rem;
+  font-size: 1.5rem;
   padding-left: 1rem;
-  letter-spacing: 0.15rem; }
+  letter-spacing: 0.15rem;
+  color: #fff; }
 
 .brand {
   display: flex;
@@ -18,19 +19,21 @@
 .navbar-toggler {
   background-color: #fff !important; }
 
-.nav-color::before,
-.nav-color::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  z-index: -1;
-  background-color: #7B6C9E; }
+.nav-color {
+  background: blueviolet;
+  background: -moz-linear-gradient(342deg, #8a2be2 0%, rgba(27, 181, 236, 0.895) 69%);
+  background: -webkit-linear-gradient(342deg, blueviolet 0%, rgba(27, 181, 236, 0.895418) 69%);
+  background: linear-gradient(342deg, blueviolet 0%, rgba(27, 181, 236, 0.895418) 69%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#8a2be2", endColorstr="#1bb5ec", GradientType=1); }
 
-.nav-color::before {
-  transform: skewY(-12deg); }
+navbar-toggler.collapsed, button, .navbar-toggler {
+  background: #fff !important; }
 
-.nav-color::after {
-  transform: skewY(12deg); }
+.dropdown-toggle.nav-link {
+  color: #fff !important; }
+
+@media (min-width: 992px) {
+  button {
+    background: #8a2be2 !important; }
+  .site-name-font {
+    font-size: 2rem; } }
