--- a/css/NavMenu.module.css
+++ b/css/NavMenu.module.css
@@ -21,9 +21,9 @@
 
 .nav-color {
   background: blueviolet;
-  background: -moz-linear-gradient(342deg, #39b2de 0%, rgba(27, 181, 236, 0.895) 29%);
-  background: -webkit-linear-gradient(342deg, #39b2de 0%, rgba(27, 181, 236, 0.895418) 29%);
-  background: linear-gradient(342deg, #39b2de 0%, rgba(27, 181, 236, 0.895418) 29%);
+  background: -moz-linear-gradient(342deg, #39b2de 0%, rgba(27, 181, 236, 0.895) 100%);
+  background: -webkit-linear-gradient(342deg, #39b2de 0%, rgba(27, 181, 236, 0.895418) 100%);
+  background: linear-gradient(342deg, #39b2de 0%, rgba(27, 181, 236, 0.895418) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#8a2be2", endColorstr="#1bb5ec", GradientType=1); }
 
 navbar-toggler.collapsed, button, .navbar-toggler {
@@ -37,3 +37,6 @@ navbar-toggler.collapsed, button, .navbar-toggler {
     background: #8a2be2 !important; }
   .site-name-font {
     font-size: 2rem; } }
+
+nav {
+  z-index: 1; }
