--- a/css/HeroSearch.module.css
+++ b/css/HeroSearch.module.css
@@ -10,10 +10,11 @@
   background: linear-gradient(0deg, #d4d4dd 0%, #1bb5ec 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d4d4dd", endColorstr="#1bb5ec", GradientType=1); }
 
-.herocard h1 {
+.herocard .spanh1 {
   font-family: 'Hero';
   letter-spacing: 0.5rem;
-  margin-top: 1rem; }
+  margin-top: 1rem;
+  display: block; }
 
 .herocard h2 {
   font-family: 'Courier New', Courier, monospace; }
