--- a/css/AnimatedBannerAds.module.css
+++ b/css/AnimatedBannerAds.module.css
@@ -53,27 +53,45 @@
     position: relative; }
     .banner.topRadius728 .animated-panel {
       background-color: #fff;
-      border-top-left-radius: 1rem;
-      border-top-right-radius: 1rem;
       color: #fff;
       font-family: 'Times New Roman', Times, serif;
       font-weight: bolder;
       position: absolute;
-      width: 40%;
-      left: 40%;
-      bottom: 0;
+      right: 0;
       background-image: url("https://images.theconversation.com/files/379516/original/file-20210119-15-tmyvf4.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1200&h=900.0&fit=crop");
       background-size: cover;
-      padding: 1rem;
-      z-index: 3; }
+      padding: 10.2rem;
+      z-index: 1; }
     .banner.topRadius728 .parallelogram {
       width: 200px;
-      height: 120px;
+      height: 100%;
       transform: skew(30deg);
       background: #243e68;
       position: absolute;
       left: 45%;
-      z-index: 1; }
+      z-index: 1;
+      position: relative; }
+    .banner.topRadius728 .final-text {
+      width: 100%;
+      position: absolute;
+      color: #5bd7bc;
+      display: flex;
+      justify-content: left;
+      align-items: center;
+      z-index: 1000;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+      font-size: 1.5rem; }
+    .banner.topRadius728.repeat-btn {
+      position: relative;
+      z-index: 4; }
+    .banner.topRadius728 .btn-pin-right {
+      z-index: 3;
+      height: 100%;
+      position: absolute;
+      right: 2px;
+      display: flex;
+      justify-content: right;
+      align-items: center; }
   .banner.noRadius728 {
     width: 728px;
     height: 90px;
@@ -96,20 +114,23 @@
       font-weight: bolder;
       position: absolute;
       width: 40%;
-      left: 40%;
+      height: 100%;
+      left: 48%;
       top: 0;
       background-image: url("https://images.theconversation.com/files/379516/original/file-20210119-15-tmyvf4.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1200&h=900.0&fit=crop");
       background-size: cover;
       padding: 1rem;
-      z-index: 3; }
+      z-index: 1; }
     .banner.noRadius728 .parallelogram {
       width: 200px;
-      height: 120px;
+      height: 100%;
       transform: skew(30deg);
       background: #243e68;
       position: absolute;
-      left: 45%;
+      left: 75%;
       z-index: 1; }
+    .banner.noRadius728 .btn-pin-right {
+      z-index: 3; }
   .banner.bottomRadius728 {
     width: 728px;
     height: 90px;
@@ -124,8 +145,7 @@
     overflow: hidden; }
     .banner.bottomRadius728 .animated-panel {
       background-color: #fff;
-      border-top-left-radius: 1rem;
-      border-top-right-radius: 1rem;
+      border-top-left-radius: 0;
       color: #fff;
       font-family: 'Times New Roman', Times, serif;
       font-weight: bolder;
@@ -140,7 +160,7 @@
       z-index: 1; }
     .banner.bottomRadius728 .parallelogram {
       width: 200px;
-      height: 120px;
+      height: 100%;
       transform: skew(30deg);
       background: #243e68;
       position: absolute;
@@ -150,27 +170,31 @@
       z-index: 4; }
     .banner.bottomRadius728 .text {
       z-index: 3; }
+    .banner.bottomRadius728 .text2 {
+      position: relative;
+      z-index: 4; }
+    .banner.bottomRadius728 .text-small {
+      font-size: 1rem; }
   .banner.bannerWidth300 {
     width: 300px;
     height: 250px;
     color: #fff;
-    display: felx;
-    justify-content: center;
-    align-items: center;
     border: 1px solid #000;
     margin: 1rem auto;
     box-shadow: 0 4px 2px -2px gray;
     position: relative; }
     .banner.bannerWidth300 .animated-text {
       background-image: url("https://images.theconversation.com/files/379516/original/file-20210119-15-tmyvf4.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1200&h=900.0&fit=crop");
-      background-size: cover;
       background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center center;
       padding: 0.5rem;
-      position: absolute;
       border-top: 1px solid #fff;
-      display: felx;
+      display: flex;
       justify-content: center;
-      align-items: center; }
+      align-items: center;
+      width: 100%;
+      height: 100%; }
     .banner.bannerWidth300 .text {
       display: flex;
       justify-content: left;
@@ -195,9 +219,26 @@
     height: 600px;
     background-color: #007CBC;
     color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #000;
-    margin: 1rem auto;
-    box-shadow: 0 4px 2px -2px gray; }
+    border: 2px solid #000;
+    box-shadow: 0 4px 2px -2px gray;
+    margin: auto;
+    position: relative; }
+    .banner.bannerWidth160 h1 {
+      font-family: 'Courier New', Courier, monospace;
+      font-size: 4rem;
+      font-weight: bold;
+      color: #51838e;
+      padding-left: .5rem; }
+    .banner.bannerWidth160 .animated-panel {
+      background-color: #fff;
+      color: #000;
+      width: 100%;
+      height: 280px;
+      padding: .5rem;
+      border-top: 1px solid red;
+      position: absolute;
+      bottom: 0; }
+      .banner.bannerWidth160 .animated-panel h2 {
+        font-size: 1rem; }
+      .banner.bannerWidth160 .animated-panel ul {
+        padding-left: 1rem; }
