--- a/css/AnimatedBannerAds.module.css
+++ b/css/AnimatedBannerAds.module.css
@@ -81,9 +81,6 @@
       z-index: 1000;
       font-family: Verdana, Geneva, Tahoma, sans-serif;
       font-size: 1.5rem; }
-    .banner.topRadius728.repeat-btn {
-      position: relative;
-      z-index: 4; }
     .banner.topRadius728 .btn-pin-right {
       z-index: 3;
       height: 100%;
@@ -92,6 +89,9 @@
       display: flex;
       justify-content: right;
       align-items: center; }
+    .banner.topRadius728 .text {
+      position: relative;
+      z-index: 1; }
   .banner.noRadius728 {
     width: 728px;
     height: 90px;
@@ -119,7 +119,7 @@
       top: 0;
       background-image: url("https://images.theconversation.com/files/379516/original/file-20210119-15-tmyvf4.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1200&h=900.0&fit=crop");
       background-size: cover;
-      padding: 1rem;
+      padding: .5rem;
       z-index: 1; }
     .banner.noRadius728 .parallelogram {
       width: 200px;
@@ -131,6 +131,9 @@
       z-index: 1; }
     .banner.noRadius728 .btn-pin-right {
       z-index: 3; }
+    .banner.noRadius728 .text {
+      position: relative;
+      z-index: 1; }
   .banner.bottomRadius728 {
     width: 728px;
     height: 90px;
@@ -182,38 +185,36 @@
     border: 1px solid #000;
     margin: 1rem auto;
     box-shadow: 0 4px 2px -2px gray;
-    position: relative; }
+    position: relative;
+    background-image: url("https://images.theconversation.com/files/379516/original/file-20210119-15-tmyvf4.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1200&h=900.0&fit=crop");
+    background-size: auto;
+    background-position: center center;
+    background-attachment: fixed;
+    background-blend-mode: normal;
+    background-repeat: round;
+    overflow: hidden; }
     .banner.bannerWidth300 .animated-text {
-      background-image: url("https://images.theconversation.com/files/379516/original/file-20210119-15-tmyvf4.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1200&h=900.0&fit=crop");
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center center;
-      padding: 0.5rem;
-      border-top: 1px solid #fff;
+      padding: .5rem;
+      border-top: 1px solid #4c0e0e;
       display: flex;
       justify-content: center;
       align-items: center;
       width: 100%;
       height: 100%; }
+      .banner.bannerWidth300 .animated-text button {
+        margin: 0 .5rem 0 .5rem;
+        width: 70px; }
     .banner.bannerWidth300 .text {
       display: flex;
       justify-content: left;
       align-items: center; }
     .banner.bannerWidth300 .bodyTxt {
       font-size: 1.5rem;
-      color: #fff;
+      color: #c3bece;
       line-height: 1.25rem; }
       .banner.bannerWidth300 .bodyTxt p {
         font-size: 1rem;
         padding-left: 0; }
-    .banner.bannerWidth300 .btn-pin-right {
-      height: 100%;
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center; }
-    .banner.bannerWidth300 .repeat-btn {
-      margin: .25rem; }
   .banner.bannerWidth160 {
     width: 160px;
     height: 600px;
