--- a/css/NavMenu.module.css
+++ b/css/NavMenu.module.css
@@ -1,3 +1,6 @@
+.navbar {
+  position: relative; }
+
 .site-name-font {
   font-family: 'ArmyRust';
   font-size: 1.5rem;
@@ -39,4 +42,4 @@ navbar-toggler.collapsed, button, .navbar-toggler {
     font-size: 2rem; } }
 
 nav {
-  z-index: 1; }
+  z-index: 5; }
