--- a/css/FireBadge.module.css
+++ b/css/FireBadge.module.css
@@ -38,14 +38,14 @@
 
 .fire {
   position: absolute;
-  top: -5px;
-  left: 0;
+  right: 0;
+  bottom: 0;
   width: 70px;
   height: 70px;
   background-color: transparent;
-  z-index: 20000; }
+  z-index: 2; }
   .fire p {
-    color: darkblue;
+    color: #fff;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     position: absolute;
