--- a/css/ExplodingButton.module.css
+++ b/css/ExplodingButton.module.css
@@ -1,15 +1,20 @@
-.sq-container {
+.sq-container .pop-in-text {
+  color: #fff;
+  font-size: 1rem;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  white-space: nowrap;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%; }
+
+.ExplodingButton button {
+  background: #22980f !important;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) translate(-25px, -25px); }
-  .sq-container .pop-in-text {
-    color: #fff;
-    font-size: .5rem;
-    white-space: nowrap;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%; }
+  bottom: 0;
+  left: 0;
+  padding: .5rem;
+  width: 100%;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 2rem;
+  color: #fff; }
